--- a/LyapDraft.tex
+++ b/LyapDraft.tex
@@ -500,7 +500,7 @@ Choosing $x = x^\ast$ and $A_k$ such that $\tilde A_{k+1}^{-1}(\tilde A_{k+1} -\
  f(y_k) -  f(x^\ast) \leq \frac{\tilde A_0(f(x_0) - f(x^\ast)) + D_h(x^\ast, x_0)}{\tilde A_k}.
 \end{equation}
 Note, this condition requires that $A_k$ can grow at most quadratically which gives an $O(1/k^2)$ rate of convergence.
-We give a proof for both of these methods in Appendix~\ref{App:ProofAccGrad}
+We give a proof of both of these methods in Appendix~\ref{App:ProofAccGrad}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%FRANK-WOLFE %%%%%%%%%%%%%%%%%
