--- a/LyapDraft.tex
+++ b/LyapDraft.tex
@@ -103,12 +103,12 @@ Momentum methods play a central role in convex optimization. Several momentum me
 
 Momentum is a powerful heuristic for accelerating the convergence of optimization methods.    One can intuitively ``add momentum'' to a method by adding to the current step a weighted version of the previous step, encouraging the method to move along search directions that had been previously seen to be fruitful.  Such methods were first popularized by Polyak~\cite{Polyak1964}, and have been employed in many practical optimization solvers.  In particular, since the 1980s, momentum methods have been popular in neural networks as a way to accelerate the backpropagation algorithm.  The intuition is that momentum allows local search to avoid ``long ravines'' and ``sharp curvatures'' in the sublevel sets of cost functions~\cite{Rumelhardt}.
 
-Polyak motivated momentum methods by an analogy to a ``heavy ball'' moving in a potential well defined by the cost function.  However, Polyak's physical intuition was exceedingly difficult to make rigorous.  For quadratics costs, Polyak was able to apply an eigenvalue argument that showed that his Heavy Ball method required no more iterations than the method of conjugate gradients~\cite{Polyak1964}.  
-Indeed, when applied to positive definite quadratic cost functions, Polyak's Heavy Ball method is equivalent to Chebyshev's Iterative Method~\cite{Chebyshev}.   Despite its intuitive elegance, Polyak's eigenvalue analysis does not apply globally for general convex functions. Indeed, Lessard~\emph{et al.} derived a simple one dimensional counterexample where the standard Heavy Ball method does not converge~\cite{Lessard14}.  
+Polyak motivated momentum methods by an analogy to a ``heavy ball'' moving in a potential well defined by the cost function.  However, Polyak's physical intuition was exceedingly difficult to make rigorous.  For quadratic costs, Polyak was able to provide an eigenvalue argument that showed that his Heavy Ball method required no more iterations than the method of conjugate gradients~\cite{Polyak1964}.  
+Indeed, when applied to positive definite quadratic cost functions, Polyak's Heavy Ball method is equivalent to Chebyshev's Iterative Method~\cite{Chebyshev}.   Despite its intuitive elegance, Polyak's eigenvalue analysis does not apply globally for general convex functions. Indeed, Lessard~\emph{et al.} derived a simple one-dimensional counterexample where the standard Heavy Ball method does not converge~\cite{Lessard14}.  
 
-In order to make momentum methods rigorous, a different approach was required.  In celebrated work, Nesterov devised a general scheme to accelerate convex optimization methods, which achieve optimal running times for a myriad of oracle models in convex programming~\cite{Nesterov04}. However, to achieve such rigorous general applicability, Nesterov's proof techniques abandoned the physical intuition of Polyak~\cite{Nesterov04}.  In lieu of differential equations and potential functions, Nesterov devised the method of \emph{estimate sequences} to verify the correctness of these momentum-based methods.  Researchers have struggled with understanding the intuition and underpinnings of the estimate sequence methodology since Nesterov's initial papers.  Nesterov himself often refers to the associated proof techniques as an ``algebraic trick.''  
+In order to make momentum methods rigorous, a different approach was required.  In celebrated work, Nesterov devised a general scheme to accelerate convex optimization methods, achieving optimal running times under oracle models in convex programming~\cite{Nesterov04}. However, to achieve such general applicability, Nesterov's proof techniques abandoned the physical intuition of Polyak~\cite{Nesterov04}; in lieu of differential equations and potential functions, Nesterov devised the method of \emph{estimate sequences} to verify the correctness of these momentum-based methods.  Researchers have struggled with understanding the intuition and underpinnings of the estimate sequence methodology since Nesterov's initial papers.  The associated proof techniques are often viewed as an ``algebraic trick.''  
 
-To overcome the lack of intuition for the estimate sequences technique, several authors have recently proposed schemes to achieve acceleration without appealing to estimate sequences~\cite{Fazel, BubeckLeeSingh15, Lessard14}.  Orthogonally, another set of authors have taken a different approach by analyzing the continuous-time limit of accelerated methods and showing that the stability of the resulting ODEs can be verified by analyzing a simple Lyapunov function~\cite{SuBoydCandes14,Krichene15,Acceleration}.  Unfortunately, none of this previous work provides a clear path of obtaining a discrete time optimization algorithm from a continuous time ODE.  There are a vast number of ways to discretize ODEs, but not all of them give rise to convergent methods.  Indeed, for unconstrained optimization on Euclidean space, Polyak's Heavy Ball method and Nesterov's accelerated gradient descent in the setting where the objective is strongly convex have the same continuous time limit.
+To overcome the lack of intuition for the estimate sequences technique, several authors have recently proposed schemes to achieve acceleration without appealing to estimate sequences~\cite{Fazel, BubeckLeeSingh15, Lessard14}.  One promising general approach to the analysis of acceleration has been to analyze the continuous-time limit of accelerated methods and to show that the stability of the resulting ODEs can be verified via a Lyapunov function~\cite{SuBoydCandes14,Krichene15,Acceleration}.  Unfortunately, none of this previous work provides a clear path of obtaining a discrete time optimization algorithm from a continuous time ODE.  There are a vast number of ways to discretize ODEs, but not all of them give rise to convergent methods.  Indeed, for unconstrained optimization on Euclidean space, Polyak's Heavy Ball method and Nesterov's accelerated gradient descent in the setting where the objective is strongly convex have the same continuous time limit.
 
 In this paper, we propose a bridge between the continuous time limits and discrete time algorithms.  Our method takes, as its primary object, a general Lyapunov function for momentum methods in continuous time.  Through a diverse set of examples, we demonstrate how the proofs of momentum methods can be understood as bounding discretization errors of the Lyapunov function when moving to discrete time.  In particular, we show how the discretization of the associated continuous time ODE needs to be performed in such a way that the Lyapunov function remains valid when transitioning to discrete time.
 Using this technique, we provide a clean, direct proof of the convergence of Nesterov's method for strongly convex functions in Euclidean spaces.  We explore how only particular parameterizations of the continuous ODEs lead to discrete time methods.  In doing so, we explain the need for the extragradient step inside Nesterov's method which does not appear in Polyak's method.  
